# blender-synth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY_LEAK_FIX.md  Makefile  ORGANIZATION_SUMMARY.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_blender_synth.sh  setup.py
blender_synth/: __init__.py  __main__.py  worker.py
blender_synth/annotation/: __init__.py  yolo.py
blender_synth/core/: __init__.py  camera.py  physics.py  scene.py
blender_synth/objects/: __init__.py  loader.py
blender_synth/pipeline/: __init__.py  config.py  generator.py
blender_synth/randomization/: lighting.py
blender_synth/utils/: cuda_setup.py  gpu.py  logger.py
configs/: default.yaml  fast_preview.yaml  high_quality.yaml
docs/: CLEANUP_SUMMARY.md  GPU_SETUP.md  INSTALLATION.md  LOGGING.md  MEMORY_MONITORING.md  NAVIGATION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  USAGE.md  index.md
examples/: README.md  basic_generation.py  config_based_generation.py  custom_camera_angles.py  preview_generation.py
scripts/: README.md
scripts/debug/: debug_camera_view.py  debug_exact_flow.py  debug_gltf_physics_seg.py  debug_render_keys.py  debug_segmentation.py
scripts/utils/: check_annotations.py  visualize_annotations.py
tests/: README.md  test_annotation_fix.py  test_blender_gpu_info.py  test_class_instance.py  test_enable_after_load.py  test_generation.py  test_gpu_detection.py  test_gpu_sample.py  test_logging.py  test_map_by_fix.py  test_memory_fix.py  test_multiple_renders.py  test_object_visibility.py  test_physics_segmentation.py  test_with_physics_only.py
